src/objects/VPO_Sales__c.object
<CustomObject>
    <description>Object that store VPO airtime sales</description>
    <fields>
        <fullName>Estimated_Profit__c</fullName>
        <description>Estimated profit on each transaction</description>
        <label>Estimated Profit</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <label>Product ID</label>
        <referenceTo>VPO_product__c</referenceTo>
        <relationshipLabel>VPO Sales</relationshipLabel>
        <relationshipName>VPO_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trx_Ext_ID__c</fullName>
        <externalId>true</externalId>
        <label>Trx Ext ID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Trx_Hr__c</fullName>
        <description>Transaction Hours</description>
        <label>Trx Hr</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VPO_ID__c</fullName>
        <label>VPO ID</label>
        <referenceTo>VPO__c</referenceTo>
        <relationshipLabel>VPO Sales</relationshipLabel>
        <relationshipName>VPO_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>trx_VPO_HP__c</fullName>
        <label>VPO Mobile No</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trx_amount__c</fullName>
        <description>Transaction Amount</description>
        <label>Trx Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>trx_customer_hp__c</fullName>
        <description>End Customer Mobile No</description>
        <label>Customer Mobile No</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>trx_datetime__c</fullName>
        <label>Trx DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>trx_success__c</fullName>
        <label>Trx Success Status</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>trx_success_counter__c</fullName>
        <formula>IF(TEXT(trx_success__c)=&quot;TRUE&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>trx success counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>VPO Sales</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Sales_View_All</fullName>
        <columns>NAME</columns>
        <columns>trx_datetime__c</columns>
        <columns>Product_ID__c</columns>
        <columns>trx_amount__c</columns>
        <columns>trx_success__c</columns>
        <columns>trx_customer_hp__c</columns>
        <columns>VPO_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>Sales View All</label>
    </listViews>
    <nameField>
        <displayFormat>SFTX-{0000000}</displayFormat>
        <label>trx_ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VPO Sales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>